@@ -8,9 +8,6 @@
     version="2010-06-02T11:05:21.044827">
    Install quickinstaller dependencies for indicators
  </import-step>
- 
- 
-
 
  <import-step 
     id="indicators-Update-RoleMappings" 
@@ -30,8 +27,6 @@
    manual coded post-install for indicators
  </import-step>
 
-<!-- ##code-section ADDITIONALSTEPS -->
-
  <import-step 
     id="indicators-vocabularies" 
     handler="eea.indicators.setuphandlers.setup_vocabularies"
@@ -39,6 +34,7 @@
     version="2010-03-16T07:52:11.806169">
    <dependency step="indicators-QI-dependencies"/>
  </import-step>
+
  <import-step 
     id="indicators-misc" 
     handler="eea.indicators.setuphandlers.setup_misc"
@@ -46,8 +42,6 @@
     version="2010-03-16T07:52:11.806169">
    <dependency step="possible_relations"/>
  </import-step>
-
-<!-- ##/code-section ADDITIONALSTEPS -->
 
 </import-steps>
  
