@@ -8,28 +8,24 @@ from Products.Five import zcml
 from Products.PloneTestCase import PloneTestCase
 from Products.PloneTestCase.layer import onsetup
 
-PRODUCTS = ['DataGridField', 'ATVocabularyManager', "RedirectionTool"]
+PRODUCTS = ['DataGridField', 'ATVocabularyManager', "RedirectionTool",  "FiveSite", "ThemeCentre",]
 
 @onsetup
 def setup_indicators():
     fiveconfigure.debug_mode = True
 
+    fiveconfigure.debug_mode = True
     import Products.Five
+    import Products.FiveSite
     zcml.load_config('meta.zcml', Products.Five)
+    zcml.load_config('configure.zcml', Products.Five)
+    zcml.load_config('configure.zcml', Products.FiveSite)
+    fiveconfigure.debug_mode = False
+
     PloneTestCase.installProduct('Five')
 
-    try:
-        import Products.FiveSite
-    except ImportError:
-        pass    #BBB for Plone2.5
-    else:
-        zcml.load_config('configure.zcml', Products.FiveSite)
-        PloneTestCase.installProduct('FiveSite')
-
-    import eea.indicators
-    zcml.load_config('configure.zcml', eea.indicators)
-
-    fiveconfigure.debug_mode = False
+    #import eea.indicators
+    #zcml.load_config('configure.zcml', eea.indicators)
 
     for product in PRODUCTS:
         PloneTestCase.installProduct(product)
